[package]
name = "jira_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
reqwest = "0.12.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
crossterm = "0.28.1"
directories = "5.0.1"
